v2.44，持续优化